Issue #18101: Tcl.split() now process Unicode strings nested in a tuple as it do with byte strings.

Added tests for Tcl.split() and tcl.splitline().